src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__splash__tests__snapshot_splash_minimal_size.snap
---
source: src/tui/widgets/splash.rs
expression: snap(&buffer)
---
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿
⠀⠀⠀⠀⠀⣠⣴⣿⡿⢋
⠀⠀⠀⠀⣰⠛⣽⠟⣡⡾
