src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__splash__tests__snapshot_splash_tall_terminal.snap
---
source: src/tui/widgets/splash.rs
expression: snap(&buffer)
---














           ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣠⣤⣴⣶⣾⣿⢿⣿⣿⣿⣿⣿⣿⣿⣷⣶⣶⣤⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣴⡾⢟⣿⢿⣿⠟⢁⣠⠞⢉⡼⠋⢠⠏⠉⣿⠙⣏⠻⣟⠻⣿⣷⣦⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⡿⢋⡴⠋⣠⡞⠁⣴⠟⢁⣴⠋⠀⣠⡟⠀⢰⡇⠀⢻⡄⠘⣧⠈⠻⣿⡿⣿⣷⣤⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠀⣠⣴⣿⡿⢋⣴⠟⠀⣼⠋⢀⡼⠃⠀⣾⠃⠀⢰⣿⠀⠀⢸⠃⠀⠈⣿⠀⠈⢷⡄⠘⣧⠈⢿⡙⠻⣷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⣰⠛⣽⠟⣡⡾⠋⢀⣾⠃⢀⣾⠃⠀⢸⠃⠀⠀⠸⠋⠀⠀⠸⠀⠀⠀⢻⡆⠀⠸⣿⠀⠘⢷⠈⢷⡄⠙⣿⡳⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⢀⡾⢃⣼⠋⣰⡿⠁⢀⣿⠇⠀⢸⠇⠀⠀⠘⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠈⠀⠈⠁⠀⠈⣷⡘⠳⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⢀⣾⢁⣾⠇⢠⡿⠀⠀⢸⡟⠀⠀⠸⠀⠀⠀⠀⠀⢀⣴⠾⠿⠿⠿⠶⣆⡀⠀⠀⠀⠀⠀⠀⣠⡴⠾⠿⠛⠷⢦⡀⢸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠸⠛⢸⡟⠀⢸⠁⠀⠀⢾⠁⠀⠀⠀⠀⠀⠀⠀⣰⡟⠀⠀⠀⠀⠀⠀⠈⢻⡄⠀⠀⠀⠀⣴⠉⠀⠀⠀⠀⠀⠀⢳⡈⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠀⣿⣇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⠀⠀⣶⣷⠄⠀⠀⠀⢈⣧⠀⠀⠀⢈⣿⠀⠀⠀⢾⣿⠀⠀⢸⠇⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⣰⠿⠿⠿⠖⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣦⠀⠙⠉⠀⠀⠀⠀⣸⡇⠀⠀⠀⠀⠹⣷⡀⠀⠀⠀⠀⢀⡞⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⢾⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠙⢷⣤⣀⣀⣠⣤⡾⠟⠀⠀⠛⠒⠶⢶⣮⡛⠷⣶⡴⠶⠋⠀⠀⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠸⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠉⠉⠉⠁⠀⢀⣀⡀⠀⠀⠀⠀⠙⣿⠀⠀⠀⠀⠀⠀⠀⣿⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠈⠳⣦⣤⣤⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⣶⠿⠛⠻⣷⣄⠀⣠⣴⡿⠀⠀⠀⠀⠀⠀⠀⠀⠻⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠀⠀⠀⠉⢷⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⡾⠋⠀⠀⢀⣴⠟⠛⠛⠋⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⡇⠀⠀⠀⠀⠀⠀⠀⠀
           ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠻⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⣿⠀⠀⣠⡟⠀⠀⠀⢠⣾⣷⠶⢶⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⡾⠃⠀⠀⠀⠀⠀⠀⠀⠀
            ⠀⠀⠀⠀⠀⠀⠀⢀⣿⢷⣄⡀⠀⠀⠀⠀⠀⠀⠀⠀⠙⠿⠿⣿⠀⠀⠀⠀⠈⠉⠁⠀⢀⣽⣷⣄⣀⣠⣤⣤⣤⡶⠶⠟⠛⠉⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
            ⠀⠀⠀⠀⠀⠀⢀⡿⠁⠀⠉⠻⢷⣦⣄⡀⠀⠀⠀⠀⠀⠀⠀⣿⠀⠀⠀⠀⠀⠀⠘⠛⠉⠉⠹⣿⠉⠉⣽⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
            ⠀⠀⠀⠀⠀⠀⣼⣇⠀⠀⠀⠀⠀⠈⠙⠻⠿⢶⣤⣤⣤⣤⣤⣿⡀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⡏⣠⣾⣧⣄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
            ⠀⠀⠀⠀⢀⣤⣾⠿⣿⣶⣄⠀⠀⠀⠀⠀⠀⠀⠀⢈⣿⠏⠉⠉⠙⠿⣶⣦⡀⠀⠀⠀⠀⣿⡿⠿⢿⡟⠁⢈⣿⣷⡄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀

                                     v[VERSION]
                                     by nix
